--- a/.env
+++ b/.env
@@ -1,2 +1,18 @@
-VITE_PROXY_SERVER_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImNoYXRhbmRidWlsZCIsImlhdCI6MTc0NDc3Njc5OH0.BS56iZwdvPTAj9S-i0vciNP_DR2IbjmMc6BZbPtuLho
+# AI Image Generator - Environment Variables
+# Add your API keys below to enable the different AI services
 
+# OpenAI API Key (for DALL-E 3)
+# Get your key from: https://platform.openai.com/api-keys
+VITE_OPENAI_API_KEY=your_openai_api_key_here
+
+# DeepAI API Key
+# Get your key from: https://deepai.org/
+VITE_DEEPAI_API_KEY=your_deepai_api_key_here
+
+# Pixelixe API Key
+# Get your key from: https://pixelixe.com/
+VITE_PIXELIXE_API_KEY=your_pixelixe_api_key_here
+
+# Proxy Server Access Token (for API requests)
+# This is used to bypass CORS restrictions
+VITE_PROXY_SERVER_ACCESS_TOKEN=undefined
